# trekapi

./: .gitignore  .gitmodules  .python-version  README.md  dev.sh  main.py  pyproject.toml  requirements.txt
static/css/: site.css  site.css.map  site.scss
templates/home/: index.html
templates/shared/: layout.html
trekapi/: database.py  main.py  models.py  schemas.py
trekapi/api/: series.py  trek_api.py
trekapi/views/: home.py
trekapi_app/: main.py
